syntax = "proto3";

option go_package = "github.com/rikughi/commons/api";

package api;

message Order {
  string ID = 1;
  string customerID = 2;
  string Status = 3;
  repeated Item Items = 4;
  string PaymentLink = 5;
}

service OrderSerivice {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message Item {
  string ID = 1;
  string Name = 2;
  int32 Quantity = 3;
  string PriceID = 4;
}

message ItemsWithQuantity {
  string ID = 1;
  int32 Quantity = 2;
}

message CreateOrderRequest {
  string customerID = 1;
  repeated ItemsWithQuantity Items = 2;
}

service StockService {
  rpc CheckIfItemIsInStock(CheckIfItemIsInStockRequest) returns (CheckIfItemIsInStockResponse);
}

message CheckIfItemIsInStockRequest {
  repeated ItemsWithQuantity Items = 1;
}

message CheckIfItemIsInStockResponse {
  bool InStock = 1;
  repeated Item Items = 2;
}